convert video to mp4

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<h1> Welcome to HTML5 Template </h1>
 	<section>
 		<!-- <video src="images/HTML5.mp4" controls autoplay muted></video> -->
-		<video src="videos/lamees.mov" controls autoplay muted></video>
+		<video src="videos/lamees.mov" controls muted></video>
 	</section>
 	<article>
 		<p class="title"> Semantic HTML5</p>
@@ -43,27 +43,27 @@
 		<p class="title">HTML5 Details Section</p>
 		<details class="center">
 			<summary>Chapter 1, 2, 3 and 4</summary>
-			<video src="videos/1-html5-firstRecordChapter1to4.mp4" controls autoplay muted></video>
+			<video src="videos/1-html5-firstRecordChapter1to4.mp4" controls muted></video>
 		</details>
 
 		<details class="center">
 			<summary>Chapter 5, 6 and 7</summary>
-			<video src="videos/2-html5-SecondRecordChapter5to7.mp4" controls autoplay muted></video>
+			<video src="videos/2-html5-SecondRecordChapter5to7.mp4" controls muted></video>
 		</details>
 
 		<details class="center">
 			<summary>Chapter 8 and 10</summary>
-			<video src="videos/3-html5-fourthRecord-chapter-8-10.mp4" controls autoplay muted></video>
+			<video src="videos/3-html5-fourthRecord-chapter-8-10.mp4" controls muted></video>
 		</details>
 
 		<details class="center">
 			<summary>Chapter 11 and 13</summary>
-			<video src="videos/4-html5-fifthRecord-chapter-11-13.mp4" controls autoplay muted></video>
+			<video src="videos/4-html5-fifthRecord-chapter-11-13.mp4" controls muted></video>
 		</details>
 
 		<details class="center">
 			<summary>Chapter 14 and 15</summary>
-			<video src="videos/5-html5-finalRecord-14-15.mp4" controls autoplay muted></video>
+			<video src="videos/5-html5-finalRecord-14-15.mp4" controls muted></video>
 		</details>
 	</section>
 
