fix video to mp4

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<h1> Welcome to HTML5 Template </h1>
 	<section>
 		<!-- <video src="images/HTML5.mp4" controls autoplay muted></video> -->
-		<video src="videos/lamees.mov" controls muted></video>
+		<video src="videos/lamees.mp4" controls muted></video>
 	</section>
 	<article>
 		<p class="title"> Semantic HTML5</p>
